# is-nominal

./: is-nominal.cabal  stack.yaml  token.txt
app/: Main.hs
src/: Lib.hs
